--- a/css/style.css
+++ b/css/style.css
@@ -149,14 +149,21 @@ h2 span {
   font-weight: 300;
   font-size: 70px;
   padding-bottom: 10px;
-  text-align: left;
+  text-align: center;
   white-space: nowrap;
   word-break: keep-all;
   cursor: default;
 }
 
+.element {
+	height: 60px;
+	font-size: D16px;
+	text-align: center;
+	cursor: default;
+  }
+
 #hero .col-md-7 {
-  text-align: left;
+  text-align: center;
   border-left: #ffffff;
 }
 
@@ -172,13 +179,6 @@ h2 span {
 #hero h1 span {
   color: #28a7e9;
   font-weight: bold;
-}
-
-.element {
-  height: 60px;
-  font-size: D16px;
-  text-align: left;
-  cursor: default;
 }
 
 #hero .btn {
