--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ h2 span {
   align-items: center;
   text-align: center;
   justify-content: center;
-  margin: 0 auto;
+  align-content: center;
 }
 
 #hero .img-fluid {
@@ -147,15 +147,14 @@ h2 span {
 #hero h1 {
   font-weight: 300;
   font-size: 70px;
-  padding-bottom: 10px;
   text-align: left;
   white-space: nowrap;
   word-break: keep-all;
   cursor: default;
 }
 
-.element {
-  height: 60px;
+#hero .element {
+  height: 50px;
   font-size: D16px;
   text-align: left;
   cursor: default;
@@ -177,6 +176,7 @@ h2 span {
   text-align: center;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 #hero h1 span {
@@ -190,14 +190,21 @@ h2 span {
   border-width: 2px;
   border-color: rgb(191, 193, 194);
   color: #fff;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
-  margin-top: 20px;
   width: auto;
-  height: 60px;
-  padding-top: 18px;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  height: 65px;
+  padding-top: 16px;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
+}
+
+#hero .buttonplacement{
+  text-align: center;
+  padding-top: 120px
 }
 
 #hero .btn:hover {
@@ -211,7 +218,7 @@ h2 span {
   align-items: flex;
   width: 800px;
   margin: 0 auto;
-  margin-top: 200px;
+  margin-top: 130px;
   padding: 10px;
   text-align: center;
   font-size: xx-small;
@@ -646,6 +653,10 @@ h2 span {
   border-color: transparent;
 }
 /* end contact */
+
+/* start footer */
+
+/* end footer/
 
 /* start copyright */
 #copyright {
