--- a/css/style.css
+++ b/css/style.css
@@ -659,35 +659,175 @@ h2 span {
 
 /* start footer */
 
-/* end footer/
-
-/* start copyright */
-#copyright {
-  padding: 20px;
+#footer body {
+ position:relative;
+ font-weight:400;
+ font-size:15px
 }
-#copyright p {
-  font-weight: 400;
-}
-/* end copyright */
 
-/* start social icon */
-.social-icon {
+#footer .footer-area{
+  justify-content: center;
+  align-items: center;
+}
+
+#footer ul {
+ padding:0;
+ margin:0
+}
+
+#footer li {
+ list-style:none
+}
+
+#footer a:focus,a:hover {
+ text-decoration:none;
+ -webkit-transition:.3s ease;
+ -o-transition:.3s ease;
+ transition:.3s ease
+}
+#footer a:focus {
+ outline:0
+}
+#footer img {
+ max-width:100%
+}
+#footer p {
+ font-size:16px;
+ line-height:30px;
+ color:#898b96;
+ font-weight:300
+}
+#footer h4 {
+ font-family:Rubik,sans-serif;
+ margin:0;
+ font-weight:400;
+ padding:0;
+ color:#363940
+}
+#footer a {
+ color:#ffffff
+}
+#footer .no-padding {
+ padding:0!important
+}
+#footer .go_top {
+ line-height:40px;
+ cursor:pointer;
+ width:40px;
+ background:#5867dd;
+ color:#fff;
+ position:fixed;
+ -webkit-box-shadow:0 4px 4px rgba(0,0,0,.1);
+ box-shadow:0 4px 4px rgba(0,0,0,.1);
+ -webkit-border-radius:50%;
+ border-radius:50%;
+ right:-webkit-calc((100% - 1140px)/ 2);
+ right:calc((100% - 1140px)/ 2);
+ z-index:111;
+ bottom:80px;
+ text-align:center
+}
+
+#footer .go_top span {
+ display:inline-block
+}
+
+#footer .footer-big {
+ padding:105px 0 65px 0
+}
+
+#footer .footer-big .footer-widget {
+ margin-bottom:40px
+}
+
+#footer .footer--light {
+ background:#e7e8ed
+}
+
+#footer .footer-big .footer-menu ul li a,.footer-big p,.footer-big ul li {
+ color:#898b96
+}
+
+#footer .footer-menu {
+ padding-left:48px
+}
+
+#footer .footer-menu ul li a {
+ font-size:15px;
+ line-height:32px;
+ -webkit-transition:.3s;
+ -o-transition:.3s;
+ transition:.3s
+}
+#footer .footer-menu ul li a:hover {
+ color:#e3e3e3
+}
+#footer .footer-menu--1 {
+ width:100%
+}
+#footer .footer-widget-title {
+  color: white;
+ line-height:42px;
+ margin-bottom:10px;
+ font-size:18px
+}
+#footer .mini-footer {
+ background:#192027;
+ text-align:center;
+ padding:32px 0
+}
+#footer .mini-footer p {
+ margin:0;
+ line-height:26px;
+ font-size:15px;
+ color:#999
+}
+#footer .mini-footer p a {
+ color:#5867dd
+}
+#footer .mini-footer p a:hover {
+ color:#34bfa3
+}
+#footer .widget-about img {
+ display:block;
+ margin-bottom:30px
+}
+#footer .widget-about p {
+ font-weight:400
+}
+#footer .widget-about .contact-details {
+ margin:30px 0 0 0
+}
+#footer .widget-about .contact-details li {
+ margin-bottom:10px
+}
+#footer .widget-about .contact-details li:last-child {
+ margin-bottom:0
+}
+#footer .widget-about .contact-details li span {
+ padding-right:12px
+}
+#footer .widget-about .contact-details li a {
+ color:#5867dd
+}
+
+#footer .social-icon {
   position: relative;
   padding: 0;
+  padding-top: 100px;
   margin: 0;
 }
-.social-icon h4 {
+#footer .social-icon h4 {
   display: inline-block;
   padding-right: 20px;
 }
-.social-icon li {
+#footer .social-icon li {
   display: inline-block;
   list-style: none;
 }
-.social-icon li a {
-  border: 1px solid #fff;
-  border-radius: 2px;
-  color: #fff;
+#footer .social-icon li a {
+  font-size: xx-large;
+  color: #f6f6f6;
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -697,8 +837,16 @@ h2 span {
   transition: all 0.4s ease-in-out;
   margin-right: 10px;
 }
-.social-icon li a:hover {
-  background: #28a7e9;
-  border-color: transparent;
+
+/* end of footer */
+
+/* start copyright */
+#copyright {
+  padding: 20px;
 }
-/* end social icon */
+
+#copyright p {
+  font-weight: 400;
+}
+
+/* end copyright */
