--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -106,7 +106,7 @@
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:focus,
 .navbar-default .navbar-nav > .open > a:hover {
-  color: #555;
+  color: #55555500;
   background-color: #e7e7e7;
 }
 
